stylesheets/_page.scss
h1 {
  font-family: 'Lato', 'Trebuchet MS', sans-serif;
  font-size: 36px;
  font-weight: bold;
  text-align: center;
  margin-top: 6px;  /* only a little bit of top margin because this element is usually the very first */
  margin-bottom: 32px;
  line-height: 1.2;

  @media (max-width: 1199px) {
    font-size: 32px;
    margin-bottom: 28px;
  }

  @media (max-width: 899px) {
    font-size: 26px;
    margin-bottom: 20px;
  }

  &.midl {
    text-align: center;
    margin-bottom: -4px;
  }
}

h2, h3 {
  font-family: 'Lato', 'Trebuchet MS', sans-serif;
  font-weight: normal;
  margin-top: 26px;
  margin-bottom: 13px;
  line-height: 1.2;
}

h2 {
  font-size: 26px;

  @media (max-width: 1199px) {
    font-size: 24px;
    margin-top: 24px;
  }

  @media (max-width: 899px) {
    font-size: 22px;
    margin-top: 22px;
  }

  &.midl {
    text-align: center;
    font-size: 32px;

    @media (max-width: 1199px) {
      font-size: 28px;
    }

    @media (max-width: 899px) {
      font-size: 24px;
    }
  }
}

h3 {
  font-size: 23px;

  @media (max-width: 1199px) {
    font-size: 21px;
    margin-top: 21px;
  }

  @media (max-width: 899px) {
    font-size: 19px;
    margin-top: 19px;
  }
}

h4, h5 {
  font-family: 'Roboto Slab', Roboto, Helvetica, Arial, sans-serif;
  font-weight: normal;
  margin-top: 13px;
  margin-bottom: 13px;
  line-height: 1.2;
}

h4 {
  font-size: 18px;

  @media (max-width: 1199px) {
    font-size: 17px;
  }

  @media (max-width: 899px) {
    font-size: 16px;
  }
}

h5 {
  font-size: 16px;

  @media (max-width: 1199px) {
    font-size: 15px;
  }
}

h6 {
  font-family: Roboto, Helvetica, Arial, sans-serif;
  font-size: 15px;
  font-weight: bold;
  margin-top: 13px;
  margin-bottom: 13px;
  line-height: 1.15;

  @media (max-width: 899px) {
    font-size: 14px;
  }
}

h1, h2, h3, h4, h5, h6 {
  &:first-child, &.topmost {
    margin-top: 0; /* top most heading should not have any top margin since there is usually nothing above */
  }
}

p {
  margin: 0 0 13px 0;

  &.extra-spacing {
    margin-bottom: 26px;
  }

  &.primary-photo {
    margin-top: 32px;
    margin-bottom: 26px;
  }
}

small {
  font-size: 80%;
}

.small {
  display: block;
  line-height: 1.475;
  font-size: 80%;
}

ul, ol {
  margin-top: 0;
  margin-bottom: 13px;
}

.timeline {
  margin-bottom: 3px;

  ul, ol {
    li {
      margin-top: 6px;
    }

    li:first-child {
      margin-top: 0;
    }
  }
}

hr {
  margin-top: 26px;
  margin-bottom: 26px;
  border: 0;
  border-top: 1px solid #EEEEEE;
}

a {
  color: $link-color;
  text-decoration: none;

  &:hover, &:focus {
    color: $link-hover-color;
  }

  &:active {
    color: $link-active-color;
  }
}

a.button {
  $button-base-color: $primary-color !default;
  $button-color-top: lighten(saturate(adjust-hue($button-base-color, -1), 19.5), 14.35);
  $button-color-top-hover: lighten(saturate($button-color-top, 3.75), 2.35);
  $button-color-bottom: $button-base-color;
  $button-color-bottom-hover: $button-color-bottom;

  /* Fallback colors for browsers that don't support gradients */
  $button-color: lighten(saturate(adjust-hue($button-color-bottom, -1), 8.5), 10.75);
  $button-color-hover: $button-color-top-hover;

  color: white;
  background: $button-color;
  background-image: linear-gradient(to bottom, $button-color-top, $button-color-bottom);
  border-radius: 12px;
  font-family: 'Lato', 'Trebuchet MS', sans-serif;
  font-style: normal;
  font-size: 16px;
  padding: 9px 20px 11px 20px;
  text-decoration: none;
  border-width: 0;
  line-height: 2.5;
  white-space: nowrap;

  &:hover, &:active, &:focus {
    background: $button-color-hover;
    background-image: linear-gradient(to bottom, $button-color-top-hover, $button-color-bottom-hover);
    color: white;
    text-decoration: none;
  }
}

img {
  max-width: 100%;

  &.align-left {
    float: left;
    margin: 5px 20px 5px 0;
  }

  &.align-right {
    float: right;
    margin: 5px 0 5px 20px;
  }
}

table.grid {
  border-collapse: collapse;
  margin-bottom: 13px;

  &, td, th {
    border: 1px solid #ddd;
  }

  td, th {
    padding: 8px 12px;
  }
}

table.offset {
  margin: 2em 0;
}

table.centered {
  margin-left: auto;
  margin-right: auto;
}

.credits {
  display: block;
  font-size: 64%;
  color: #888888;
  text-align: right;
  padding-right: 5px;
}

.centered {
  text-align: center;
}

.youtube {
  margin: 2rem 0;
}

iframe[src*="youtube"] {
  max-width: 100%;

  @media (max-width: 899px){
    width: 84vw;
    height: 47.25vw;
  }
}

.deadlines {
  ul {
    list-style: none;
    padding: 0;

    li {
      margin: 8px 0;

      strong {
        display: inline-block;
        min-width: 250px;
      }
    }
  }
}

.impressions {
  margin: 19px 0;

  p {
    display: flex;
    justify-content: space-between;
    flex-direction: row;

    @media (max-width: 499px) {
      flex-direction: column;
    }

    .impression {
      display: inline-block;
      margin: 0 1% 0 0;
    }
  }
}

.papers {
  ul {
    .title {
      display: block;
      font-weight: bold;
    }

    .authors {
      margin-right: 0.625em;
    }

    ul.links {
      display: inline-block;
      list-style: none;
      padding: 0;

      li {
        display: inline;
      }

      li + li:before {
        content: ' • ';
      }
    }

    .abstract {
      display: none;
      font-size: .8em;
      line-height: 1.35;
      margin-top: 4px;
      padding-left: 18px;
      padding-bottom: 4px;

      .actions {
        display: block;
        margin-top: 4px;
      }
    }

    a.toggle_visibility {
      cursor: pointer;
    }
  }
}

/* Page classes */
&.sponsors {
  h2 {
    @mixin sponsorship-level($color) {
      border-bottom: 3px solid $color;
    }

    .platinum {
      @include sponsorship-level(#E5E4E2);
    }
    .gold {
      @include sponsorship-level(#D4AF37);
    }
    .silver {
      @include sponsorship-level(#C0C0C0);
    }
    .bronze {
      @include sponsorship-level(#CD7F32);
    }
  }

  h3 {
    .amount {
      font-size: 82.5%;
      position: relative;
      top: -5px;
    }
  }

  .logos {
    p {
      display: flex;
      align-items: center;
      flex-wrap: wrap;
      flex-direction: row;

      @media (max-width: 499px) {
        flex-direction: column;
      }
    }

    img {
      margin: 10px 30px 10px 0;
    }
  }
}

&.keynotes {
  h2 {
    img {
      @extend img.align-right;
      max-width: 25vw;
    }
  }

  h3 {
    font-size: 17px;
    margin-top: -2px;
    margin-bottom: 17px;

    & + h3 {
      margin-top: -8px;
    }

    & + p {
      @media (min-width: 500px) {
        display: flex;
        align-items: start;
        flex-direction: row-reverse;
      }

      img {
        @extend img.align-right;
        flex: 0 0 auto;
      }
    }
  }

  h4 {
    font-size: 90%;
    font-weight: bold;
    font-family: 'Roboto Slab', Roboto, Helvetica, Arial, sans-serif;
    margin-top: 20px;
    margin-bottom: 12px;
  }
}

@import 'footer';

